# bong-registry

./: .gitignore  CLAUDE.md  README.md  flake.nix  justfile  spec.md  todos.md
.github/workflows/: deploy.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2322ebd5de3d_nullable_bong_fields.py  61f765d3b1f1_init.py  a4f8b2c6d9e1_offense_tokens.py
backend/app/: db.py  llm.py  main.py  models.py  schemas.py
backend/app/routes/: bongs.py  leaderboard.py  stream.py  users.py
backend/tests/: conftest.py  test_bongs.py  test_leaderboard.py  test_llm.py  test_users.py
frontend/: auth.ts  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/api/service/[...path]/: route.ts
frontend/app/auth/signin/: page.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/setup/: page.tsx
frontend/app/submit/: page.tsx
frontend/app/users/: page.tsx
frontend/components/: app-header.tsx  bong-card.tsx  bong-feed.tsx  bong-input.tsx  bong-leaderboard.tsx  bong-of-period.tsx  submit-bar.tsx  user-rename.tsx
frontend/components/ui/: tabs.tsx
frontend/types/: api.ts  next-auth.d.ts
k8s/: backend.yaml  cert-manager.yaml  frontend.yaml  ingress.yaml  postgres.yaml
